[gd_scene load_steps=7 format=3 uid="uid://cv7c75pb3vl00"]

[ext_resource type="Script" uid="uid://btt78t50wh2ha" path="res://main.gd" id="1_r0du0"]
[ext_resource type="Script" uid="uid://bojjdf0loci11" path="res://addons/bili_live/core/BiliLiveClient.gd" id="2_cm0pq"]
[ext_resource type="Resource" uid="uid://dk8c6bpqcyygi" path="res://live_config.tres" id="3_fos0i"]

[sub_resource type="LabelSettings" id="LabelSettings_u44n3"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_epypp"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u44n3"]
bg_color = Color(1, 1, 1, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_r0du0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitlePanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = " 请先在 live_config.tres 文件配置身份信息后再点击 Start 进行连接"
label_settings = SubResource("LabelSettings_u44n3")
vertical_alignment = 1

[node name="ContentPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_epypp")
autowrap_mode = 3

[node name="ButtonPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u44n3")

[node name="StartButton" type="Button" parent="CanvasLayer/ButtonPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -37.5
offset_right = 121.0
offset_bottom = 37.5
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="EndButton" type="Button" parent="CanvasLayer/ButtonPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "End"

[node name="BiliLiveClient" type="Node" parent="."]
script = ExtResource("2_cm0pq")
config = ExtResource("3_fos0i")
metadata/_custom_type_script = "uid://bojjdf0loci11"

[connection signal="pressed" from="CanvasLayer/ButtonPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonPanel/EndButton" to="." method="_on_end_button_pressed"]
[connection signal="connected" from="BiliLiveClient" to="." method="_on_bili_live_client_connected"]
[connection signal="disconnected" from="BiliLiveClient" to="." method="_on_bili_live_client_disconnected"]
[connection signal="live_data" from="BiliLiveClient" to="." method="_on_bili_live_client_live_data"]
[connection signal="live_dm" from="BiliLiveClient" to="." method="_on_bili_live_client_live_dm"]
[connection signal="live_room_enter" from="BiliLiveClient" to="." method="_on_bili_live_client_live_room_enter"]
